tests/dataset/tpc-ds/compiler/go/q29.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq293848559371/001/main.go:365:2: syntax error: unexpected name at64 after top level declaration
